--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
+  
 }
 
 * {
@@ -80,11 +81,17 @@ a:hover {
 }
 
 header {
-  background: var(--primary);
+  background: #06174B;
 }
 
 header a {
   color: var(--light);
+}
+
+nav {
+  font-family: 'Open Sans';
+  align-self: center;
+  font-weight: bold;
 }
 
 button {
@@ -201,6 +208,14 @@ input:focus {
 
 .error-text {
   color: var(--error);
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  text-decoration: none;
 }
 
 @media screen and (max-width: 768px) {
