--- a/client/src/components/Shelf/style.css
+++ b/client/src/components/Shelf/style.css
@@ -61,6 +61,19 @@
 
 .view-random{
   position: fixed;
+  top: 32%;
+  right: 1%;
+  font-size: 2rem;
+  cursor: pointer;
+  background-color: var(--secondary);
+  border-radius: 50%;
+  padding: .25rem;
+  width: 50px;
+  height: 50px;
+}
+
+.choose-challenge {
+  position: fixed;
   top: 22%;
   right: 1%;
   font-size: 2rem;
