--- a/client/src/index.css
+++ b/client/src/index.css
@@ -267,3 +267,56 @@ li {
     width: 100%;
   }
 }
+
+.view-bookshelf{
+  position: fixed;
+  top: 2%;
+  right: 1%;
+  font-size: 2rem;
+  cursor: pointer;
+  background-color: var(--secondary);
+  border-radius: 50%;
+  padding: .25rem;
+  width: 50px;
+  height: 50px;
+}
+
+
+.view-leaderboard{
+  position: fixed;
+  top: 12%;
+  right: 1%;
+  font-size: 2rem;
+  cursor: pointer;
+  background-color: var(--secondary);
+  border-radius: 50%;
+  padding: .25rem;
+  width: 50px;
+  height: 50px;
+}
+
+.view-random{
+  position: fixed;
+  top: 32%;
+  right: 1%;
+  font-size: 2rem;
+  cursor: pointer;
+  background-color: var(--secondary);
+  border-radius: 50%;
+  padding: .25rem;
+  width: 50px;
+  height: 50px;
+}
+
+.choose-challenge {
+  position: fixed;
+  top: 22%;
+  right: 1%;
+  font-size: 2rem;
+  cursor: pointer;
+  background-color: var(--secondary);
+  border-radius: 50%;
+  padding: .25rem;
+  width: 50px;
+  height: 50px;
+}
